# glfw-inputs

./: .clang-format  CMakeLists.txt  README.md  mkdocs.yml
cmake/: glfw_inputsConfig.cmake
docs/: index.md
docs/architecture/: architecture.md
docs/controls/: control-mapping.md  input-manager.md  joystick.md  keyboard.md  mouse.md  multiple-joysticks.md
docs/getting-started/: basic-usage.md  button-down-states.md  installation-cmake.md  installation-file.md  joysticks.md  motion-controls.md  swapping-mappings.md
docs/misc/: control-traits.md  enums-inputs.md  events.md  messaging.md  motion-event.md  motion-surface.md  position.md  received-signal.md
include/glfw-inputs/: enums.hpp  glfw-inputs.hpp  include.hpp
samples/: keyboard.cpp
tests/: main.cpp
